consegna M1S1G3 Simone Acquadro

--- a/m1/s1/g3/FE-S1-L3-Esercizio (1)/index.html
+++ b/m1/s1/g3/FE-S1-L3-Esercizio (1)/index.html
@@ -16,21 +16,21 @@
         </div>
     </header>
     <main>
-        <section>
+        <section id="sezione-focaccia">
             <div>
                 <h1>Focaccia with Caramelized Onions, Cranberries, and Brie</h1>
                 <p>Wow your taste buds with this festive focaccia appetizer topped with sweet caramelized onions, tart
                     cranberries, and creamy brie. It will become your new holiday starter!</p>
-                <img src="./assets/focaccia.png" alt="focaccia">
-                <p id="sally">Image: Sally Vegas</p>
+                <img id="foto" src="./assets/focaccia.png" alt="focaccia">
+                <h4 id="sally">Image: Sally Vegas</h4>
             </div>
-            <div>
+        </section>
+            <div id="feat">
                 <h2>FEATURED IN:</h2>
                 <a href="#">Fresh Cranberry Recipes That Go Beyond Sauce</a>
             </div>
-        </section>
         <section>
-            <h2>Ingredients</h2>
+            <h2 class="titoli">Ingredients</h2>
             <div>
                 <h3>For the focaccia:</h3>
                 <ul>
@@ -54,7 +54,7 @@
             </div>
         </section>
         <div>
-            <h2>Method</h2>
+            <h2 class="titoli">Method</h2>
             <ol>
                 <li>
                     <h3>Make the focaccia dough</h3>
