--- a/m1/s1/g4/FE-S1-L4-Esercizio (1)/index.html
+++ b/m1/s1/g4/FE-S1-L4-Esercizio (1)/index.html
@@ -39,11 +39,19 @@
   <main id="main">
     <section>
       <div>
-        <h2 id="titolo-post">Come creare un template per i post</h2> <br>
-        <p>di Mario Rossi - pubblicato il 25/10/2020</p>
-        <p>La prima cosa da fare è suddividere in blocchi logici la pagina, identificando le parti comuni da applicare a tutte le pagine</p>
+        <h2 id="titolo-post">Come creare un template per i post</h2>
+        <div id="sottotitolo">
+          <p><i class="fas fa-pen-square"></i> di Mario Rossi - <i class="fas fa-clock"></i> pubblicato il 25/10/2020
+          </p>
+        </div>
+      </div>
+      <div class="testo">
+        <p>La prima cosa da fare è suddividere in blocchi logici la pagina, identificando le <span class="viola">parti
+            comuni</span> da applicare a tutte le pagine</p>
+      </div>
+      <div class="ul">
+        <div class="testo">Le varie aree saranno quindi suddivise in:</div>
         <ul>
-          Le varie aree saranno quindi suddivise in:
           <li>
             Contenuti di intestazione del tag <code>&lt;header&gt;</code>
           </li>
@@ -54,76 +62,72 @@
             Contenuti di fine pagina comuni, dainserire nel tag <code>&lt;footer&gt;</code>
           </li>
         </ul>
-
-        <p>
-          Formattazione del codice
-          <br>
-          <br>
-          Il testo dell'articolo dovrà essere formattato per identificare tutte le parti da selezionare con i
-          CSS. Perciò i passi saranno:
-        </p>
-        <ol>
-          <li>
-            Progettare il markup assegnando ad ogni specifico testo il tag appropriato
-          </li>
-          <li>
-            Scrivere HTML dai tag esterni a quelli interni e dall'alto verso il basso
-          </li>
-          <li>
-            Applicare gli stili css
-          </li>
-        </ol>
-        <p>L'applicazione di stili CSS è cresciuta negli anni fino a raggiungere la diffusione pressoché totale
-        </p>
-        <table>
-          <caption>Diffusione dei CSS</caption>
-          <tr>
-            <th>Anni</th>
-            <th>Percentuale di utilizzo</th>
-            <th>Supporto Browsers</th>
-          </tr>
-          <tr>
-            <td>2000</td>
-            <td>20%</td>
-            <td>17%</td>
-          </tr>
-          <tr>
-            <td>2002</td>
-            <td>35%</td>
-            <td>22%</td>
-          </tr>
-          <tr>
-            <td>2004</td>
-            <td>45%</td>
-            <td>42%</td>
-          </tr>
-          <tr>
-            <td>2008</td>
-            <td>80%</td>
-            <td>50%</td>
-          </tr>
-          <tr>
-            <td>2012</td>
-            <td>100%</td>
-            <td>76%</td>
-          </tr>
-        </table>
-        <p>Un test di validazione potrà essere effettuato tramite il tool online <a
-            href="https://validator.w3.org/nu/#textarea">https://validator.w3.org/nu/#textarea</a> dedicato
-          allo scopo. Una volta ottimizzato il tutto, avremo raggiunto il nostro obiettivo e saremo diventati
-          dei killer dal dischetto come lui:</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/OwPHeLEUgHo?si=OODhcTeOWTkxmVss"
-          title="YouTube video player" frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen></iframe>
-        <br>
-
-        <form>
-          <input type="email" name="email" id="email" placeholder="Email">
-          <br>
-          <button type="submit">Iscriviti!</button>
-        </form>
       </div>
+      <div class="testo">
+        <p>
+          Formattazione del codice <br>
+          Il testo dell'articolo dovrà essere formattato per identificare tutte le parti da <span class="viola">selezionare con i CSS</span>. Perciò i passi saranno:
+        </p>
+      </div>
+
+      <ol>
+        <li>
+          Progettare il markup assegnando ad ogni specifico testo il tag appropriato
+        </li>
+        <li>
+          Scrivere HTML dai tag esterni a quelli interni e dall'alto verso il basso
+        </li>
+        <li>
+          Applicare gli stili css
+        </li>
+      </ol>
+      <p class="testo">L'applicazione di stili CSS è cresciuta negli anni fino a raggiungere la diffusione pressoché totale
+      </p>
+      <table>
+        <caption>Diffusione dei CSS</caption>
+        <tr>
+          <th>Anni</th>
+          <th>Percentuale di utilizzo</th>
+          <th>Supporto Browsers</th>
+        </tr>
+        <tr>
+          <td>2000</td>
+          <td>20%</td>
+          <td>17%</td>
+        </tr>
+        <tr>
+          <td>2002</td>
+          <td>35%</td>
+          <td>22%</td>
+        </tr>
+        <tr>
+          <td>2004</td>
+          <td>45%</td>
+          <td>42%</td>
+        </tr>
+        <tr>
+          <td>2008</td>
+          <td>80%</td>
+          <td>50%</td>
+        </tr>
+        <tr>
+          <td>2012</td>
+          <td>100%</td>
+          <td>76%</td>
+        </tr>
+      </table>
+      <p>Un test di validazione potrà essere effettuato tramite il tool online <a
+          href="https://validator.w3.org/nu/#textarea">https://validator.w3.org/nu/#textarea</a> dedicato
+        allo scopo. Una volta ottimizzato il tutto, avremo raggiunto il nostro obiettivo e saremo diventati
+        dei killer dal dischetto come lui:</p>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/OwPHeLEUgHo?si=OODhcTeOWTkxmVss"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen></iframe>
+      <form>
+        <input type="email" name="email" id="email" placeholder="Email">
+        <button type="submit">Iscriviti!</button>
+      </form>
     </section>
   </main>
   <footer>
@@ -139,9 +143,9 @@
       </a>
     </p>
     <p>
-      Blog Epicode &copy;2023 <br>
+      Blog Epicode &copy;2023
       Testata online di Mario Rossi, registrata con prot.213/2018 - via Luigi Einaudi 2 - Milano P.IVA
-      00112233. <br>
+      00112233.
       <a href="mailto:info@epicode.school">info@epicode.school</a>
     </p>
   </footer>
