--- a/m1/s1/g4/FE-S1-L4-Esercizio (1)/index.html
+++ b/m1/s1/g4/FE-S1-L4-Esercizio (1)/index.html
@@ -51,7 +51,7 @@
       </div>
       <div class="ul">
         <div class="testo">Le varie aree saranno quindi suddivise in:</div>
-        <ul>
+        <ul id="ul">
           <li>
             Contenuti di intestazione del tag <code>&lt;header&gt;</code>
           </li>
@@ -81,13 +81,13 @@
           Applicare gli stili css
         </li>
       </ol>
-      <p class="testo">L'applicazione di stili CSS è cresciuta negli anni fino a raggiungere la diffusione pressoché totale
+      <p class="testo">L'applicazione di stili CSS è cresciuta negli anni fino a raggiungere la diffusione pressoché totale.
       </p>
-      <table>
-        <caption>Diffusione dei CSS</caption>
+      <table id="table">
+        <caption id="caption">Diffusione dei CSS</caption>
         <tr>
-          <th>Anni</th>
-          <th>Percentuale di utilizzo</th>
+          <th>Anno</th>
+          <th>% di utilizzo</th>
           <th>Supporto Browsers</th>
         </tr>
         <tr>
@@ -116,10 +116,12 @@
           <td>76%</td>
         </tr>
       </table>
-      <p>Un test di validazione potrà essere effettuato tramite il tool online <a
-          href="https://validator.w3.org/nu/#textarea">https://validator.w3.org/nu/#textarea</a> dedicato
-        allo scopo. Una volta ottimizzato il tutto, avremo raggiunto il nostro obiettivo e saremo diventati
-        dei killer dal dischetto come lui:</p>
+      <div id="t-iframe">
+        <p>Un test di validazione potrà essere effettuato tramite il tool online <a
+            href="https://validator.w3.org/nu/#textarea">tool online</a> dedicato
+          allo scopo. Una volta ottimizzato il tutto, avremo raggiunto il nostro obiettivo e saremo diventati
+          dei killer dal dischetto come lui:</p>
+      </div>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/OwPHeLEUgHo?si=OODhcTeOWTkxmVss"
         title="YouTube video player" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
