inizio css progetto settimanale 1

--- a/m1/s1/g4/FE-S1-L4-Esercizio (1)/index.html
+++ b/m1/s1/g4/FE-S1-L4-Esercizio (1)/index.html
@@ -25,16 +25,14 @@
       <img src="./assets/img/logo.svg" alt="logo epicode">
       <h1>EPICODE - IL BLOG DEI DEVELOPERS</h1>
     </div>
-    <nav>
-      <ul>
-        <li><i class="fas fa-long-arrow-alt-right"></i><a href="#">Home</a><i class="fas fa-long-arrow-alt-left"></i>
-        </li>
-        <li><i class="fas fa-long-arrow-alt-right"></i><a href="#">Articoli</a><i
-            class="fas fa-long-arrow-alt-left"></i></li>
-        <li><i class="fas fa-long-arrow-alt-right"></i><a href="#">Lavora con noi</a><i
-            class="fas fa-long-arrow-alt-left"></i></li>
-      </ul>
-    </nav>
+    <ul>
+      <li><i class="fas fa-long-arrow-alt-right"></i><a href="#">Home</a><i class="fas fa-long-arrow-alt-left"></i>
+      </li>
+      <li><i class="fas fa-long-arrow-alt-right"></i><a href="#">Articoli</a><i class="fas fa-long-arrow-alt-left"></i>
+      </li>
+      <li><i class="fas fa-long-arrow-alt-right"></i><a href="#">Lavora con noi</a><i
+          class="fas fa-long-arrow-alt-left"></i></li>
+    </ul>
   </header>
   <main id="main">
     <section>
@@ -66,7 +64,8 @@
       <div class="testo">
         <p>
           Formattazione del codice <br>
-          Il testo dell'articolo dovrà essere formattato per identificare tutte le parti da <span class="viola">selezionare con i CSS</span>. Perciò i passi saranno:
+          Il testo dell'articolo dovrà essere formattato per identificare tutte le parti da <span
+            class="viola">selezionare con i CSS</span>. Perciò i passi saranno:
         </p>
       </div>
 
@@ -81,7 +80,8 @@
           Applicare gli stili css
         </li>
       </ol>
-      <p class="testo">L'applicazione di stili CSS è cresciuta negli anni fino a raggiungere la diffusione pressoché totale.
+      <p class="testo">L'applicazione di stili CSS è cresciuta negli anni fino a raggiungere la diffusione pressoché
+        totale.
       </p>
       <table id="table">
         <caption id="caption">Diffusione dei CSS</caption>
@@ -122,12 +122,15 @@
           allo scopo. Una volta ottimizzato il tutto, avremo raggiunto il nostro obiettivo e saremo diventati
           dei killer dal dischetto come lui:</p>
       </div>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/OwPHeLEUgHo?si=OODhcTeOWTkxmVss"
+      <iframe id="iframe" src="https://www.youtube.com/embed/OwPHeLEUgHo?si=OODhcTeOWTkxmVss"
         title="YouTube video player" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         allowfullscreen></iframe>
+      <div>
+        <h3>NOVITÀ</h3>
+      </div>
       <form>
-        <input type="email" name="email" id="email" placeholder="Email">
+        <input type="email" name="email" id="email" placeholder="Inserisci l'email">
         <button type="submit">Iscriviti!</button>
       </form>
     </section>
