--- a/m1/s1/g5 progetto settimanale/S1-L5/Esercizio/index.html
+++ b/m1/s1/g5 progetto settimanale/S1-L5/Esercizio/index.html
@@ -9,9 +9,9 @@
         content="Da zero a Epicode con i corsi completi per diventare uno sviluppatore professionista in 3 mesi.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Open+Sans:wght@300;400;700&display=swap"
-        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -25,13 +25,12 @@
         </div>
     </header>
     <main>
-        <div>
-            <img src="./images/banner.jpg" alt="banner">
+        <div id="main-section">
             <h1>Corso Web Developer</h1>
             <p>Smetti di inseguire i titoli, inizia a lavorare. Mentre tutti vogliono arricchire il CV, tu pensa ad arricchire le tue competenze.</p>
             <a href="#">PARTIAMO!</a>
         </div>
-        <section>
+        <section id="secondary-section">
             <div>
                 <h3>Tutti ti cercheranno</h3>
                 <p>Sono 30.000 in Italia le posizioni di developer scoperte, scegli quella che ti stimola di più.</p>
