--- a/m1/s1/g5 progetto settimanale/S1-L5/Esercizio/index.html
+++ b/m1/s1/g5 progetto settimanale/S1-L5/Esercizio/index.html
@@ -51,11 +51,14 @@
                 <p>Non serve lavorare in ufficio per essere creatori di prodotti digitali.</p>
             </div>
         </section>
-        <div>
-            <h2>Epicode garantisce</h2>
-            <blockquote>"3 mesi intensivi di corso che cambieranno radicalmente la tua vita"</blockquote>
-            <p>Mario Rossi <sub>CEO, Epicode</sub></p>
-        </div>
+        <section id="red-section"> 
+            <div>
+                <h2>Epicode garantisce</h2>
+                <blockquote>"3 mesi intensivi di corso che cambieranno radicalmente la tua vita"</blockquote>
+                <p id="p1">Mario Rossi</p>
+                <p id="p2">CEO, Epicode</p>
+            </div>
+        </section>
     </main>
     <aside>
         <div>
