--- a/m1/s1/g5 progetto settimanale/S1-L5/Esercizio/index.html
+++ b/m1/s1/g5 progetto settimanale/S1-L5/Esercizio/index.html
@@ -27,7 +27,7 @@
     <main>
         <div id="main-section">
             <h1>Corso Web Developer</h1>
-            <p>Smetti di inseguire i titoli, inizia a lavorare. Mentre tutti vogliono arricchire il CV, tu pensa ad arricchire le tue competenze.</p>
+            <p class="main-section-p">Smetti di inseguire i titoli, inizia a lavorare. Mentre tutti vogliono arricchire il CV, tu pensa ad arricchire le tue competenze.</p>
             <a href="#">PARTIAMO!</a>
         </div>
         <section id="secondary-section">
@@ -53,34 +53,35 @@
         </section>
         <section id="red-section"> 
             <div>
-                <h2>Epicode garantisce</h2>
+                <h2 class="body-h2">Epicode garantisce</h2>
                 <blockquote>"3 mesi intensivi di corso che cambieranno radicalmente la tua vita"</blockquote>
                 <p id="p1">Mario Rossi</p>
                 <p id="p2">CEO, Epicode</p>
             </div>
         </section>
     </main>
-    <aside>
+    <aside id="aside">
         <div>
             <img src="./images/foto1.jpg" alt="foto1">
             <h3>Il tuo PC</h3>
-            <p>Se vuoi diventare developer è l'unico strumento di cui hai bisogno.</p>
+            <p  class="card">Se vuoi diventare developer è l'unico strumento di cui hai bisogno.</p>
         </div>
         <div>
             <img src="./images/foto2.jpg" alt="foto2">
             <h3>Impara ora</h3>
-            <p>Impara da chi diventerai tra qualche anno, e diventa una rockstar come loro.</p>
+            <p class="card">Impara da chi diventerai tra qualche anno, e diventa una rockstar come loro.</p>
         </div>
         <div>
             <img src="./images/foto3.jpg" alt="foto3">
             <h3>Lavora subito</h3>
-            <p>Sappiamo cosa vogliono le aziende, perché lavoriamo con loro.</p>
+            <p class="card">Sappiamo cosa vogliono le aziende, perché lavoriamo con loro.</p>
         </div>
     </aside>
-    <footer>
-        <h2>Contattaci</h2>
+    <footer id="footer">
+        <h2 class="body-h2">Contattaci</h2>
         <div>
-            <i class="fas fa-external-link-square-alt"></i>
+            <i class="fas fa-phone-square-alt"></i>
+            </i>
             <a href="#">(+39)112233456</a>
         </div>
         <div>
@@ -88,9 +89,10 @@
             <a href="#">info@epicode.school</a>
         </div>
         <div>
-            <i class="fas fa-phone-square-alt"></i>
-            <a href="#">Via Appia 1 - 00100 Roma (RM)</a>
+            <p><i class="fas fa-external-link-square-alt"></i> Via Appia 1 - 00100 Roma (RM)</p>
         </div>
+        <hr>
+        <p>&copy; 2021. Immagini di <a href="#">Pixabay</a></p>
     </footer>
 </body>
 </html>
