desktop finito, manca display inline block

--- a/m1/s1/g5 progetto settimanale/S1-L5/Esercizio/desktop/index.html
+++ b/m1/s1/g5 progetto settimanale/S1-L5/Esercizio/desktop/index.html
@@ -32,15 +32,15 @@
         </div>
         <section id="secondary-section">
             <div>
+                <div>
+                    <img src="./images/notebook.jpg" alt="notebook">
+                </div>
                 <h3>Tutti ti cercheranno</h3>
                 <p>Sono 30.000 in Italia le posizioni di developer scoperte, scegli quella che ti stimola di più.</p>
             </div>
             <div>
                 <h3>Lavora dove vuoi</h3>
                 <p>Lavora da casa, in riva al mare o in montagna.</p>
-            </div>
-            <div>
-                <img src="./images/notebook.jpg" alt="notebook">
             </div>
             <div>
                 <h3>Scegli il tuo ruolo</h3>
@@ -61,20 +61,20 @@
         </section>
     </main>
     <aside id="aside">
-        <div>
+        <div class="card-p">
             <img src="./images/foto1.jpg" alt="foto1">
             <h3>Il tuo PC</h3>
-            <p  class="card">Se vuoi diventare developer è l'unico strumento di cui hai bisogno.</p>
+            <p class="card-p">Se vuoi diventare developer è l'unico strumento di cui hai bisogno.</p>
         </div>
-        <div>
+        <div class="card-p">
             <img src="./images/foto2.jpg" alt="foto2">
             <h3>Impara ora</h3>
-            <p class="card">Impara da chi diventerai tra qualche anno, e diventa una rockstar come loro.</p>
+            <p class="card-p">Impara da chi diventerai tra qualche anno, e diventa una rockstar come loro.</p>
         </div>
-        <div>
+        <div class="card-p">
             <img src="./images/foto3.jpg" alt="foto3">
             <h3>Lavora subito</h3>
-            <p class="card">Sappiamo cosa vogliono le aziende, perché lavoriamo con loro.</p>
+            <p class="card-p">Sappiamo cosa vogliono le aziende, perché lavoriamo con loro.</p>
         </div>
     </aside>
     <footer id="footer">
