--- a/m1/s1/g5 progetto settimanale/S1-L5/Esercizio/desktop/index.html
+++ b/m1/s1/g5 progetto settimanale/S1-L5/Esercizio/desktop/index.html
@@ -91,7 +91,7 @@
         <div>
             <p><i class="fas fa-external-link-square-alt"></i> Via Appia 1 - 00100 Roma (RM)</p>
         </div>
-        <hr>
+        <div id="hr"><hr></div>
         <p>&copy; 2021. Immagini di <a href="#">Pixabay</a></p>
     </footer>
 </body>
