--- a/m1/s2/g5/W2-D5/Amazon Page/assets/html/index.html
+++ b/m1/s2/g5/W2-D5/Amazon Page/assets/html/index.html
@@ -42,16 +42,16 @@
                 <h2 class="inline">Find the perfect gift <a href="#" class="inline">Shop now</a></h2>
             </div>
             <div class="row">
-                <div class="column">
+                <div class="column" id="foto1">
                     <img src="../images/img_1.jpg" alt="tablet" class="cards">
                 </div>
-                <div class="column">
+                <div class="column" id="foto2">
                     <img src="../images/img_2.jpg" alt="vaso" class="cards">
                 </div>
-                <div class="column">
+                <div class="column" id="foto3">
                     <img src="../images/img_3.jpg" alt="watch" class="cards">
                 </div>
-                <div class="column">
+                <div class="column" id="foto4">
                     <img src="../images/img_4.jpg" alt="cane" class="cards">
                 </div>
             </div>
