--- a/m2/s1/g5/U2-D5/base_di_partenza/index.html
+++ b/m2/s1/g5/U2-D5/base_di_partenza/index.html
@@ -237,33 +237,37 @@
                 <img src="./assets/imgs/image20.jpg" class="article_vertical_img" alt="">
             </div>
         </div>
-        <div class="tag_cloud">
-            <h2>Discover more of what matters to you</h2>
-            <div class="buttons">
-                <button class="cloud_button">Programming</button>
-                <button class="cloud_button">Data Science</button>
-                <button class="cloud_button">Technology</button>
-                <button class="cloud_button">Self Improvement</button>
-                <button class="cloud_button">Writing</button>
-                <button class="cloud_button">Relationships</button>
-                <button class="cloud_button">Machine Learning</button>
-                <button class="cloud_button">Productivity</button>
-                <button class="cloud_button">Politics</button>
+        <div class="fixed">
+            <div class="tag_cloud">
+                <div class="mobile_flex">
+                    <h2>Discover more of what matters to you</h2>
+                    <div class="buttons">
+                        <button class="cloud_button">Programming</button>
+                        <button class="cloud_button">Data Science</button>
+                        <button class="cloud_button">Technology</button>
+                        <button class="cloud_button">Self Improvement</button>
+                        <button class="cloud_button">Writing</button>
+                        <button class="cloud_button">Relationships</button>
+                        <button class="cloud_button">Machine Learning</button>
+                        <button class="cloud_button">Productivity</button>
+                        <button class="cloud_button">Politics</button>
+                    </div>
+                </div>
+                <div class="green">
+                    <p class="green_p">See more topics</p>
+                </div>
+                <footer class="footer">
+                    <p class="gray_text">Help</p>
+                    <p class="gray_text">Status</p>
+                    <p class="gray_text">About</p>
+                    <p class="gray_text">Careers</p>
+                    <p class="gray_text">Blog</p>
+                    <p class="gray_text">Privacy</p>
+                    <p class="gray_text">Terms</p>
+                    <p class="gray_text">Text to speech</p>
+                    <p class="gray_text">Teams</p>
+                </footer>
             </div>
-            <div class="green">
-                <p class="green_p">See more topics</p>
-            </div>
-            <footer class="footer">
-                <p class="gray_text">Help</p>
-                <p class="gray_text">Status</p>
-                <p class="gray_text">About</p>
-                <p class="gray_text">Careers</p>
-                <p class="gray_text">Blog</p>
-                <p class="gray_text">Privacy</p>
-                <p class="gray_text">Terms</p>
-                <p class="gray_text">Text to speech</p>
-                <p class="gray_text">Teams</p>
-            </footer>
         </div>
     </aside>
 </body>
