--- a/m2/s2/g2/FE-U2-S2-L2-Esercizio.html
+++ b/m2/s2/g2/FE-U2-S2-L2-Esercizio.html
@@ -13,43 +13,101 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="#">Navbar</a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Saldi</a>
-                      </li>
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Dropdown
-                        </a>
-                        <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="#">Action</a></li>
-                          <li><a class="dropdown-item" href="#">Another action</a></li>
-                          <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    <img src="./assets/Costa-logo-2021.svg.png" height="40px" alt="logo" class="m-3">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Saldi</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Welcome Summer</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Last minute</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Recensioni</a>
+                            </li>
                         </ul>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                      </li>
-                    </ul>
-                    <form class="d-flex" role="search">
-                      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                      <button class="btn btn-outline-danger" type="submit">Search</button>
-                    </form>
-                  </div>
+                        <form class="d-flex" role="search">
+                            <input class="form-control me-2" type="search" placeholder="Cerca posti da sogno"
+                                aria-label="Search">
+                            <button class="btn btn-outline-danger" type="submit">Cerca</button>
+                        </form>
+                    </div>
                 </div>
-              </nav>
-        </div class="container">
+            </nav>
+        </div>
     </header>
+    <div class="container">
+        <div class="text-center text-lg-start bg-light rounded shadow-sm p-5 pb-4 pt-4 mt-5">
+            <h1 class="display-1 d-inline-block text-muted align-middle fw-light">Eveline-R</h1>
+            <p class="d-inline-block align-middle mb-0"> - For the Freedom</p>
+            <hr class="my-2">
+            <p class="mb-2 fst-italic">Scopri le destinazioni più calde del momento</p>
+            <button class="btn bg-info my-1 text-white px-4">Prenota ora</button>
+        </div>
+    </div>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <section class="my-4 d-flex flex-column container" id="week-deal">
+        <div class="d-flex justify-content-between">
+            <h3>Saldi</h3>
+        </div>
+        <div class="row">
+            <div class="col-lg-3 px-3">
+                <div class="card border-3 border-info">
+                    <img src="./assets/artworks-000168335008-hvo367-t500x500.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                            card's content.</p>
+                        <a href="#" class="btn btn-info text-dark">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 px-3">
+                <div class="card border-3 border-info">
+                    <img src="./assets/artworks-000168335008-hvo367-t500x500.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                            card's content.</p>
+                        <a href="#" class="btn btn-info text-dark">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 px-3">
+                <div class="card border-3 border-info">
+                    <img src="./assets/artworks-000168335008-hvo367-t500x500.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                            card's content.</p>
+                        <a href="#" class="btn btn-info text-dark">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 px-3">
+                <div class="card border-3 border-info">
+                    <img src="./assets/artworks-000168335008-hvo367-t500x500.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                            card's content.</p>
+                        <a href="#" class="btn btn-info text-dark">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
