--- a/m2/s2/g5/homepage.html
+++ b/m2/s2/g5/homepage.html
@@ -7,10 +7,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="node_modules/bootstrap-icons/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
 
-<body class="bg-black text-white">
+<body class="bg-dark text-white">
     <nav class="navbar navbar-expand-lg container-fluid px-md-4">
         <div class="container-fluid">
             <img src="./Netflix-assets/assets/netflix_logo.png" alt="logo" height="50">
@@ -40,15 +40,16 @@
                     <i class="bi bi-search px-2"></i>
                     <p class="m-0 px-2">KIDS</p>
                     <i class="bi bi-bell-fill px-2"></i>
-                    <button class="btn btn-black dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      <img src="./Netflix-assets/assets/avatar.png" height="30" alt="">
+                    <button class="btn btn-black dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        <img src="./Netflix-assets/assets/avatar.png" height="30" alt="">
                     </button>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Preferiti</a></li>
-                      <li><a class="dropdown-item" href="#">Da guardare</a></li>
-                      <li><a class="dropdown-item" href="#">In Uscita</a></li>
+                        <li><a class="dropdown-item" href="#">Preferiti</a></li>
+                        <li><a class="dropdown-item" href="#">Da guardare</a></li>
+                        <li><a class="dropdown-item" href="#">In Uscita</a></li>
                     </ul>
-                  </div>
+                </div>
             </div>
         </div>
     </nav>
@@ -56,8 +57,8 @@
         <div class="d-flex align-items-center">
             <h1 class="pe-4">TV Shows</h1>
             <div class="dropdown">
-                <button class="dropdown-toggle" type="button" data-bs-toggle="dropdown"
-                    aria-expanded="false" id="butun">
+                <button class="dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"
+                    id="butun">
                     Genres
                 </button>
                 <ul class="dropdown-menu" id="dropdown-butun">
