--- a/m2/s2/g5/profile.html
+++ b/m2/s2/g5/profile.html
@@ -28,17 +28,15 @@
                 </div>
                 <p class="d-flex justify-content-start fs-4 mb-1">Language:</p>
                 <div class="dropdown">
-                    <button class="btn btn-secondary dropdown-toggle profile_btn mb-4" type="button"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        English
+                    <button class="btn btn-dark border-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      English
                     </button>
-                </div>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Italiano</a></li>
-                    <li><a class="dropdown-item" href="#">Espanol</a></li>
-                    <li><a class="dropdown-item" href="#">Francais</a></li>
-                </ul>
-            </div>
+                    <ul class="dropdown-menu ">
+                      <li><a class="dropdown-item" href="#">Italiano</a></li>
+                      <li><a class="dropdown-item" href="#">Español</a></li>
+                      <li><a class="dropdown-item" href="#">Français</a></li>
+                    </ul>
+                  </div>
             <div class="border-bottom border-secondary">
                 <p class="fs-4 mb-1">Maturity Settings:</p>
                 <button type="button" class="btn btn-secondary profile_btn2 mb-4">ALL MATURITY SETTINGS</button>
@@ -61,9 +59,9 @@
                 </div>
             </div>
         </div>
-        <div class="container mt-4">
+        <div class="container justify-content-evenly d-flex mt-4 px-5">
             <div class="d-flex mx-5 px-5">
-                <button type="button" class="btn btn-outline-secondary profile_btn3 mb-4 px-5">SAVE</button>
+                <button type="button" class="btn btn-outline-secondary profile_btn3 mb-4 ">SAVE</button>
                 <button type="button" class="btn btn-outline-secondary profile_btn3 mb-4 px-5">CANCEL</button>
                 <button type="button" class="btn btn-outline-secondary profile_btn3 mb-4 px-5">DELETE PROFILE</button>
             </div>
