--- a/m2/s2/g5/profile.html
+++ b/m2/s2/g5/profile.html
@@ -15,7 +15,7 @@
         <img src="./Netflix-assets/assets/netflix_logo.png" alt="logo" height="60">
     </div>
     <div class="container d-flex flex-wrap">
-        <div class="container border-bottom border-secondary">
+        <div class="container">
             <div class="row">
                 <div class="col-12 d-flex justify-content-start border-bottom border-secondary pt-3">
                     <h1 class="pb-2">Edit Profile</h1>
