--- a/m2/s2/g5/homepage.html
+++ b/m2/s2/g5/homepage.html
@@ -38,7 +38,7 @@
                 </ul>
                 <div class="dropdown pe-5 me-2 d-flex align-items-center align-content-center">
                     <i class="bi bi-search px-2"></i>
-                    <p class="m-0 px-2">KIDS</p>
+                    <p class="m-0 px-2">KIDS</p>p
                     <i class="bi bi-bell-fill px-2"></i>
                     <button class="btn btn-black dropdown-toggle" type="button" data-bs-toggle="dropdown"
                         aria-expanded="false">
