finito con lacrimuccia

--- a/m2/s3/g5/homepage.html
+++ b/m2/s3/g5/homepage.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- Ho avuto un problema con l'errore 400, purtroppo non riuscivo a comunicare con il server e non sono riuscito a risolverlo. Ho proato con un altro server e funzionava, non ho capito come risolvere il problema con il server originale -->
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
